--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Package            Version    Location
------------------- ---------- ------------------------
+
 appdirs            1.4.3
 attrs              20.3.0
 beautifulsoup4     4.9.3
@@ -98,7 +97,7 @@ spacy              3.0.5
 spacy-legacy       3.0.1
 sqlitedict         1.7.0
 srsly              2.4.0
-stanza             1.2        /home/illsuionist/stanza
+stanza             1.2        
 tabulate           0.8.7
 thinc              8.0.2
 threadpoolctl      2.1.0
