--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ decorator==4.4.2
 Deprecated==1.2.11
 distlib==0.3.0
 distro==1.4.0
-en-core-web-sm  https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 filelock==3.0.12
 flair==0.7
 ftfy==5.8
